--- a/rookie-im-framework/rookie-im-common/pom.xml
+++ b/rookie-im-framework/rookie-im-common/pom.xml
@@ -8,6 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <properties>
+        <knife4j-openapi3-spring.version>4.3.0</knife4j-openapi3-spring.version>
+    </properties>
 
     <artifactId>rookie-im-common</artifactId>
     <dependencies>
@@ -36,11 +39,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!-- knife4j openapi3 接口文档 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
-            <version>2.0.9</version>
+            <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
+            <version>${knife4j-openapi3-spring.version}</version>
         </dependency>
+
     </dependencies>
 
 </project>
