进行参数校验（使用validation和自定义注解）

--- a/rookie-im-framework/rookie-im-common/pom.xml
+++ b/rookie-im-framework/rookie-im-common/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
             <version>${knife4j-openapi3-spring.version}</version>
         </dependency>
-
+        <!-- 在pom.xml中添加（如果尚未包含） -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
