--- a/rookie-im-server/rookie-im-user/pom.xml
+++ b/rookie-im-server/rookie-im-user/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>rookie-im-user</artifactId>
 
-
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <artifactId>sky-take-out</artifactId>-->
+<!--            <groupId>com.sky</groupId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
 </project>
