--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>rookie-im-server</module>
         <module>rookie-im-framework</module>
         <module>netty-learing</module>
+        <module>rookie-im-core</module>
     </modules>
 <!--    <dependencies>-->
 <!--        <dependency>-->
@@ -37,6 +38,9 @@
         <mysql-connector.version>8.0.29</mysql-connector.version>
         <lombok.version>1.18.10</lombok.version>
         <hutool.version>5.8.18</hutool.version>
+        <snakeyaml.version>1.27</snakeyaml.version>
+        <redisson.version>3.15.6</redisson.version>
+        <rabbit.client.version>5.6.0</rabbit.client.version>
     </properties>
 <!--    <dependencies>-->
 <!--        <dependency>-->
@@ -78,6 +82,19 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
+            </dependency>
+            <!-- yaml -->
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
+
+            <!-- redisson -->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
         </dependencies>
 
